# school-2024-2

./: Aprendizaje.typ  Ciberinteligencia.typ  Crypto.typ  Datos.typ  Etica.typ  Hombre.typ  Interfaces.typ  Panteras.typ  pyrightconfig.json
crypto/: hill_cypher.py  playfair.py  texto2.py  texto3.py
crypto/tarea/.helix/: languages.toml
hombre_clases/: 04_Daniel_Bell.typ
hombre_lecturas/: eclipse_of_reason.typ
interfaces/buen_disenio/: bib.yml  main.typ
interfaces/mejora_queue/: main.typ
ml/: 01_clase.py  02_clase.py  03_clase.py  04_clase.py  05_xgboost.py  06_clasify.py  07_clasify.py  08_clasify.py  09_.py  Analisis_Multicolinealidad.ipynb  Ejercicio_pre_examen.ipynb  Features_Categoricos.ipynb  README.md  examen.py  linear_regresion_2.py  linear_regression.py  multi_linear_regression.py  pyproject.toml  ridge_lasso.py  theme.mplstyle
