[project]
name = "ml"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Alejandro Osornio", email = "aoxo.contact@gmail.com" }
]
dependencies = [
    "numpy>=2.1.0",
    "polars>=1.4.1",
    "seaborn>=0.13.2",
    "matplotlib>=3.9.2",
    "ipykernel>=6.29.5",
    "scikit-learn>=1.5.1",
    "scipy>=1.14.0",
    "sympy>=1.13.2",
    "pandas>=2.2.2",
    "plotly-express>=0.4.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[tool.rye]
managed = true
virtual = true
dev-dependencies = []
