[project]
name = "ml"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Alejandro Osornio", email = "aoxo.contact@gmail.com" }
]
dependencies = [
    "numpy>=2.1.0",
    "polars>=1.4.1",
    "seaborn>=0.13.2",
    "matplotlib>=3.9.2",
    "ipykernel>=6.29.5",
    "scikit-learn>=1.5.1",
    "scipy>=1.14.0",
    "sympy>=1.13.2",
    "pandas>=2.2.2",
    "plotly-express>=0.4.1",
    "colorama>=0.4.6",
    "xgboost>=2.1.1",
    "pyarrow>=17.0.0",
    "fastparquet>=2024.5.0",
    "pyspark>=3.5.3",
    "openpyxl>=3.1.5",
]
readme = "README.md"
requires-python = ">= 3.8"

[tool.rye]
managed = true
virtual = true
dev-dependencies = []
